# django-deploy-test

./: pyproject.toml
django/config/: settings.py
